# Redline-Agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  GLOSSARY.md
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_exports.py  0003_structural_alerts.py
backend/scripts/: dump_alignment.py
backend/src/redline_agent/: config.py  deps.py  main.py
backend/src/redline_agent/api/routers/: changes.py  (+3 more)
backend/src/redline_agent/domain/: __init__.py  enums.py  models.py
backend/src/redline_agent/infra/: blob_store.py  embedder.py
backend/src/redline_agent/pipeline/: aligner.py  defined_terms.py  differ.py  flatten.py  interpreter.py  segmenter.py  tables.py
backend/src/redline_agent/redline/: __init__.py  ooxml_writer.py  paragraph_align.py  word_diff.py
backend/src/redline_agent/repositories/: db.py  orm.py  repos.py
backend/src/redline_agent/services/: change_query.py  export.py  negotiation.py  round_service.py
backend/tests/: conftest.py
backend/tests/api/: test_api.py  test_export_api.py
backend/tests/fixtures/: docx_builder.py
backend/tests/infra/: test_adjudicator.py  test_embedder.py
backend/tests/pipeline/: test_aligner.py  test_defined_terms.py  test_differ.py  test_flatten.py  test_interpreter.py  test_segmenter.py  test_tables.py
backend/tests/redline/: test_redline.py
backend/tests/services/: test_alignment_override.py  test_change_query_filters.py  test_clause_lineage.py  test_invariant_changes_equal_differ.py  test_round_service.py  test_structural_alerts.py
(+50 files in other folders)
